    to rules, OPTIMIZE 8 through 15 could result in invalid
    iptables-restore (ip6tables-restore) input.

2)  Under rare circumstances unvolving exclusion, OPTIMIZE 8 through 15
    could result in invalid iptables-restore (ip6tables-restore) input.

3)  When REQUIRE_INTERFACE=Yes, start/restart would fail unless the
    last optional interface was available.

4.4.11.3

1)  When 'any' was used in the rules SOURCE column, a duplicate rule
    was generated in all "fw2*" ("fw-* if ZONE2ZONE="-"). If 'any' was
    used in the DEST column, then a duplicate rule appeared in all "*2fw"
    (*-fw) chains.

2)  A port range that omitted the first port number (e.g., ":80") was
    rejected with the following error:

    	 ERROR: Invalid/Unknown tcp port/service (0) : ......

3)  AUTOMAKE=Yes has been broken for some time. It is now working
    correctly.

4)  Exclusion in /etc/shorewall/blacklist was correctly validated but
    was then ignored when generating iptables (ip6tables) input.

4.4.11.2

1)  A typo in /sbin/shorewall6-lite version 4.4.11.1 caused the
    stop, reset and clear commands to hang for one minute after the
    command had been executed and caused the next shorewall6-lite
    command to similarly hang for one minute.

2)  A typo in the Shorewall install.sh script prevented the Makefile from
    being installed in /usr/share/shorewall/configfiles/Makefile.

3)  A number of problems associated with Shorewall-init and Upstart
    have been corrected. 

    If you use Shorewall-init, then when upgrading to this version, be
    sure to recompile all firewall scripts before you take interfaces
    down or reboot.

4.4.11.1

1)  Previously, the Shoreall6-lite version of shorecap was using
    iptables rather than ip6tables, with the result that many capabilities
    that are only available in IPv4 were being reported as available.

2)  In a number of cases, Shorewall6 generated incorrect rules
    involving the IPv6 multicast network. The rules specify