@@ -90,30 +90,30 @@
     to rules, OPTIMIZE 8 through 15 can result in invalid
     iptables-restore (ip6tables-restore) input.
 
-    Workaround: Don't use optimizaiton levels greater than 7.
+    Corrected in Shorewall 4.4.11.4.
 
 13) Under rare circumstances involving exclusion, OPTIMIZE 8 through 15
     can result in invalid iptables-restore (ip6tables-restore) input.
 
-    Workaround: Don't use optimizaiton levels greater than 7.
+    Corrected in Shorewall 4.4.11.4.
 
 14) When REQUIRE_INTERFACE=Yes, start/restart will fail unless the last
     optional interface defined in the interfaces file is available.
 
-    Workaround: None available.
+    Corrected in Shorewall 4.4.11.4.
 
 15) The compiler erroneously allows exclusion in CONTINUE rules
     (tcrules and rules files). The generated iptables (ip6tables) rules
     do not work as expected.
 
-    Workaround: Do not use exclusion with CONTINUE.
+    Corrected in Shorewall 4.4.11.4.
 
 16) Exclusion in blacklist file entries is correctly validated but is
     then ignored when generating iptables (ip6tables) input.
 
-    Workaround: Do not use exclusion in the blacklist file.
+    Corrected in Shorewall 4.4.11.4.
 
 17) The interface options combination of 'optional' and 'upnpclient'
     does not work correctly.
 
-    Workaround: Do not use these two options on the same interface.
+    Corrected in Shorewall 4.4.11.4.
