@@ -230,6 +230,9 @@ I I I.  P R O B L E M S   C O R R E C T E D   I N   T H I S  R E L E A S E
 3)  When REQUIRE_INTERFACE=Yes, start/restart would fail unless the
     last optional interface was available.
 
+4)  Previously, the interface option combination of 'optional' and
+    'upnpclient' did not work correctly.
+
 4.4.11.3
 
 1)  When 'any' was used in the rules SOURCE column, a duplicate rule
